# fastapi_t

./: .dockerignore  .env.development  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  HTTPS_SETUP.md  README.md  compose.yml  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  test.py
.github/: FUNDING.yml
.github/workflows/: add-to-project.yml  ci.yml  lint.yml  test-backend.yml  test-docker-compose.yml
alembic/: env.py
alembic/versions/: 431f152c61c9_initial.py  534a32cc8588_init.py  a2b3c4d5e6f7_add_hashed_refresh_token_to_user.py
app/: __init__.py  init_db.py  main.py
app/alembic/: env.py
app/alembic/versions/: a2b3c4d5e6f7_add_hashed_refresh_token_to_user.py
app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
app/models/: item.py  user.py
app/routers/: auth.py  items.py  users.py
app/schemas/: schemas.py
app/scripts/: init_db.sh
apps/core/: exceptions.py  logging.py  middleware.py  security.py
apps/models/: item.py  user.py
apps/routers/: auth.py  items.py  users.py
apps/schemas/: schemas.py
certs/: tls.crt  tls.key
tests/: conftest.py  test_auth.py  test_items.py  test_security.py  test_users.py
traefik/: config.yml
