[project]
name = "fastapi-demo"
version = "1.0.0"
description = "FastAPI Demo — 用户认证与 CRUD 示例项目"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.12",
    "uvicorn[standard]==0.34.2",
    "sqlmodel==0.0.24",
    "pydantic==2.11.3",
    "PyJWT>=2.8",
    "pwdlib[argon2]>=0.3",
    "python-multipart==0.0.20",
    "asyncpg==0.30.0",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "aiosqlite==0.22.1",
    "alembic>=1.13"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.21.0",
    "ruff",
    "pre-commit",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "alembic",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_decorators = false
exclude = ["alembic"]

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
